Sat Feb 16 01:27:29 2002  Jonathan Blandford  <jrb@redhat.com>

	* gconf/gconftool.c (read_value_type): fix typo in reading args.

2002-02-14  Dave Camp  <dave@ximian.com>

	* gconf/gconf.c: (gconf_string_to_enum): Use g_ascii_strcasecmp
	instead of g_strcasecmp.
	* gconf/gconfd.c: (gconf_main), (gconf_main_quit): Replace
	g_main_* with g_main_loop_*.
	* examples/simple-controller.c: (main): Use g_signal_connect
	instead of gtk_signal_connect.
	* examples/simple-view.c: (key_changed_callback): Use
	gtk_label_set_text instead of gtk_label_set.

2002-02-12  Havoc Pennington  <hp@pobox.com>

	* configure.in: version 1.1.8

2002-02-10  Jody Goldberg <jody@gnome.org>

	* gconf/gconftool.c : Include libxml/globals to get xmlFree
	  Without it we call a NULL function pointer.
	* backends/xml-entry.c : ditto.

2002-02-10  Havoc Pennington  <hp@pobox.com>

	* gconf/gconfd.c (signal_handler): run gnome_segv if DISPLAY is
	set. Why not. may turn it off for production.
	
2002-02-10  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf.c (CHECK_OWNER_USE): put name of function in the
	warning
	(gconf_engine_associate_schema): remove warning from this
	function, it has no GConfClient equivalent and won't mangle the
	cache

2002-02-10  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in (ALL_LINGUAS): Added pl (Polish).

2002-02-08  jacob berkman  <jacob@ximian.com>

	* gconf.m4.in: revert some stuff i didn't mean to commit
	yesterday.  Fixes problems when building with DESTDIR set.

2002-02-07  jacob berkman  <jacob@ximian.com>

	* gconf/Makefile.am (install-exec-local): don't install gconftool
	symlink

	* gconf.m4.in (AM_GCONF_SOURCE_2): call gconftool-2 rather than
	gconftool

2002-02-05  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-sanity-check.c (main): add gconf-sanity-check-2 app,
	which either exits sucessfully and does nothing, or pops up a
	dialog explaining a gconf problem and exits with a failure code.
	Could be placed in gnome-session, or at least we can tell users 