@@ -476,6 +476,7 @@ value is not set.</para></warning>
 @schema_name: name of the schema applied to this entry
 @pad1: 
 @pad2: 
+@refcount: 
 @is_default: whether @value is a default from the schema
 @is_writable: whether a new value could be set for this entry
 @pad3: 
